[package]
name = "gp"
version = "0.0.1"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
edition = "2018"
description = "Gaussian Process"
homepage = "https://github.com/sile/gp"
repository = "https://github.com/sile/gp"
readme = "README.md"
license = "MIT"

[badges]
travis-ci = {repository = "sile/gp"}
codecov = {repository = "sile/gp"}

[dependencies]
nalgebra = "0.18"
rand = "0.7"
rand_distr = "0.2"
trackable = "0.2"

[dev-dependencies]
structopt = "0.2"
