[package]
name = "gp"
version = "0.0.1"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
edition = "2024"
rust-version = "1.88"
description = "Gaussian Process"
homepage = "https://github.com/sile/gp"
repository = "https://github.com/sile/gp"
readme = "README.md"
license = "MIT"

[dependencies]
nalgebra = "0.31"
rand = "0.10"
rand_distr = "0.6"

[dev-dependencies]
structopt = "0.2"
